sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__empty11/errors.duarouter
Error: Missing length definition in lane '1_0'.
Quitting (on error).
